Fix force no content overflow

--- a/src/app/components/global.css
+++ b/src/app/components/global.css
@@ -5,6 +5,7 @@
   body,
   #app {
     height: 100%;
+    overflow: hidden;
   }
 }
 
